--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -219,7 +219,7 @@
 
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/lib/wow/wow.min.js"></script>
     <script src="static/lib/easing/easing.min.js"></script>
     <script src="static/lib/waypoints/waypoints.min.js"></script>
