--- a/templates/staffrating.html
+++ b/templates/staffrating.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-{% from "bootstrap5/form.html" import render_form %}
-{% block content %}
+{% from "bootstrap5/form.html" import render_form %} {% block content %}
+
 
     <head>
         <meta charset="utf-8">
@@ -15,6 +15,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap" rel="stylesheet">
+
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 
         <!-- Icon Font Stylesheet -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
